# hotwire-controller

./: .gitignore  CMakeLists.txt  Hotwire.c  Hotwire.h  Interface.c  Interface.h  Makefile  PWM.c  PWM.h  README.md  build  hardware.md  main.c  tasks_software.md
debug/: Debug.c  Debug.h
encoder/: Debounce.c  Debounce.h  Encoder.c  Encoder.h
feedback/: Buzzer.c  Buzzer.h  LED.c  LED.h
gpio/: gpio.c  gpio.h
hotwire/: Hotwire.c  Hotwire.h
i2c/: i2cmaster.h  twimaster.c
interrupt/: Interrupt.c
lcd/: Dimmer.c  Dimmer.h  LCDContol.c  LCDControl.c  LCDControl.h  Menu.c  Menu.h  StringUtility.c  StringUtility.h  ViewController.c  ViewController.h  lcd.h
pid/: PID.c  PID.h
pwm/: PWM.c  PWM.h
sensors/: INA219.c  INA219.h
tasks/: tasks_hardware.md  tasks_software.md
